duniverse/menhirLib.20200211/test/static/bad/epsilon-cycle.mly
%start a
%type <unit> a
%token B

%%

a:
  b | B { () }

b:
  a { () }

