duniverse/menhirLib.20200211/test/static/bad/epsilon-cycle.exp
File "epsilon-cycle.mly", line 8, characters 2-3:
File "epsilon-cycle.mly", line 11, characters 2-3:
Error: the grammar is ambiguous.
The following items participate in an epsilon-cycle:
a -> . b 
b -> . a 
